--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,17 @@ dependencies:
   sliver_tools: ^0.2.10
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.6
+  dio: ^5.2.1+1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  envied: ^0.3.0+3
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
+  sqflite: ^2.2.8+4
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +55,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  envied_generator: ^0.3.0+3
+  build_runner: ^2.4.5
+  freezed: ^2.3.5
+  json_serializable: ^6.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
