--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.6
   dio: ^5.2.1+1
+  shared_preferences: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
