--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dev_dependencies:
   build_runner: ^2.4.5
   freezed: ^2.3.5
   json_serializable: ^6.7.0
+  mockito: ^5.4.2
+  test: ^1.24.1
+  http_mock_adapter: ^0.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
