--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   json_annotation: ^4.8.1
   sqflite: ^2.2.8+4
   path_provider: ^2.0.15
+  firebase_core: ^2.15.0
+  firebase_crashlytics: ^3.3.4
+  firebase_analytics: ^10.4.4
 
 dev_dependencies:
   flutter_test:
