--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_crashlytics: ^3.3.4
   firebase_analytics: ^10.4.4
+  firebase_remote_config: ^4.2.4
 
 dev_dependencies:
   flutter_test:
