feat: added flavors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,22 @@ apply plugin: 'com.google.firebase.crashlytics'
 // END: FlutterFire Configuration
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
+def dartEnvironmentVariables = [
+        DEFINE_APP_FLAVOR: 'prod',
+];
+if (project.hasProperty('dart-defines')) {
+    dartEnvironmentVariables = dartEnvironmentVariables + project.property('dart-defines')
+            .split(',')
+            .collectEntries { entry ->
+                def pair = new String(entry.decodeBase64(), 'UTF-8').split('=')
+                [(pair.first()): pair.last()]
+            }
+    if (dartEnvironmentVariables.DEFINE_APP_FLAVOR == 'prod') {
+        dartEnvironmentVariables.put("DEFINE_ICON", "ic_launcher")
+    } else {
+        dartEnvironmentVariables.put("DEFINE_ICON", "ic_launcher_dev")
+    }
+}
 android {
     namespace "com.example.todo_app"
     compileSdkVersion flutter.compileSdkVersion
@@ -56,6 +71,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders.iconPath = dartEnvironmentVariables.DEFINE_ICON
     }
 
     buildTypes {
