--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -18,6 +18,10 @@ jobs:
         env:
           dotenv: ${{ secrets.DOTENV }}
         run: echo "$dotenv" > ".env"
+      - name: Decode firebase_option
+        env:
+          firebase_options_dart: ${{secrets.FIREBASE_OPTION}}
+        run: echo "$firebase_options_dart" > lib/firebase_options.dart
       - run: flutter pub run build_runner build --delete-conflicting-outputs
       - run: flutter analyze
       - run: dart format --set-exit-if-changed .
