--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -22,9 +22,9 @@ jobs:
         env:
           firebase_options_dart: ${{secrets.FIREBASE_OPTION}}
         run: echo "$firebase_options_dart" > lib/firebase_options.dart
-      - run: flutter analyze
       - run: flutter pub run build_runner build --delete-conflicting-outputs
-      - run: dart format --set-exit-if-changed .
+      - run: flutter analyze   
+      - run: dart format --set-exit-if-changed $(find lib -name "*.dart" -not \( -name "*.*freezed.dart" -o -name "*.*g.dart" \) ) 
   test:
     name: Run tests
     runs-on: ubuntu-latest
