--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo "$firebase_options_dart" > lib/firebase_options.dart
       - run: flutter pub run build_runner build --delete-conflicting-outputs
       - run: flutter analyze   
-      - run: dart format --set-exit-if-changed $(find lib -name "*.dart" -not \( -name "*.*freezed.dart" -o -name "*.*g.dart" \) ) 
+      - run: dart format --set-exit-if-changed $(find lib -name "*.dart" -not \( -name "*.*freezed.dart" -o -name "*.*g.dart" -o -name "firebase_options.dart"\) ) 
   test:
     name: Run tests
     runs-on: ubuntu-latest
